# Matlab_MPC

./: .gitignore  READme.md
autoware_auto_msgs/autoware_auto_mapping_msgs/msg/: HADMapBin.msg  HADMapSegment.msg  MapPrimitive.msg
autoware_auto_msgs/autoware_auto_planning_msgs/: CMakeLists.txt
autoware_auto_msgs/autoware_auto_planning_msgs/msg/: HADMapRoute.msg  Route.msg
bicycle_model/script/: AdaptiveLinMPC.m  best_mpc_params.mat  bicycle_kinematic.slx  bicycle_kinematic.slx.original  debug_simulation.m  init_mpc_params.m  init_vehicle_params.m  mpc_cost_fun.m  mpc_rsme_fun.m  run_bayesopt.m  vehi_param.m
control/: kinematic_lin_disc.m  trajectory.m
control/autoware_auto_planning_msgs/: package.xml
control/autoware_auto_planning_msgs/msg/: OrderMovement.msg  Path.msg  TrajectoryPoint.msg
resources/project/-eMODr0UCVbKNr2AZ2SajjKLyQo/: 6C-SMgMqOweVLZ8Ypfz89DOMsWEp.xml  F8Hj2AKsb7IF_OaIU_bXqpqEzfgp.xml  NDqycvr-xWedYMicanYhUNYCg0Yp.xml  Vk7GleeDvoFT-MTbSY5Z_pH2xqcp.xml  WokRJMSpVuExFf4bckMEj8Ij_dYp.xml  rG-j1ZeC2nIg_sbnFQJU67P85QEp.xml
resources/project/0AbbQcOT07bq1P6IO0hkJAZ3W5U/: PBxtv4-G9j4QETKFHjOSKkPiMYsp.xml
resources/project/0qHVeLIZUZHX41CGevT6hHY14JY/: 1zzREhGinh7e2al4PzZcOmdyzzwp.xml  3OE6NZWf98NOk3ryKey4kAPM7vIp.xml  VH0YOUQPzXNqXw5jPwud2UqXKiEp.xml
resources/project/1_6_joxowEVZavrtW93YjfBKqXI/: 44TwCW6zFcLMU_uBviX95TReADQp.xml  H_bwmI5FRXPaQ00chX2F3Pm4nOMp.xml  KwuMRzCwSqDuDwUa40RzK9u8pekp.xml  L34LlF7lWiLIyUN7hfp4siYmkTgp.xml  LzV-xKKJQvbwwNF3WxF9Fnmmm7op.xml  Nl0RqYOBGAy13rA72u_MIPbQdk0p.xml  OLuwTcAgOOgPjGQEMAlIKN48wUkp.xml  QrIRKa0v2YFv7Akw5XiKE_QfKGYp.xml  TdQ8wcMHt_bDQB2x3zsHJLlVbTop.xml
resources/project/1kS6sGDuIB1hV8L2TbQDylzMG-w/: HAA3pKztBT5BXWwBlhF60f9RztIp.xml  Jk6zG5gHLY96k7VCDikz478nHc8p.xml  M84iriF66U7Fz1JQ_a3BHYh3GRgp.xml  (+3 more)
(+818 files in other folders)
