<?xml version="1.0"?>
<package format="3">
  <name>autoware_auto_planning_msgs</name>
  <version>1.0.0</version>
  <description>MSG-based shim of Autoware.Auto planning interfaces for MATLAB ros2genmsg</description>

  <maintainer email="opensource@apex.ai">Apex.AI, Inc.</maintainer>
  <license>Apache 2</license>

  <!-- Minimal build tool: ros2genmsg only validates presence of this file -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies actually referenced by .msg files -->
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>builtin_interfaces</depend>

  <!-- Keep if you include Route.msg / HADMapRoute.msg -->
  <depend>autoware_auto_mapping_msgs</depend>

  <!-- Optional (present in original; harmless here) -->
  <depend>nav_msgs</depend>
  <depend>action_msgs</depend>
  <depend>autoware_auto_geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

